<resources>
    <string name="app_name">Homework Apps</string>

    <string name="hello_world">Hub 7 - Android Basic Class!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_calculator">Calculator</string>
    <string name="activity_contact">Phone Book</string>
    <string name="activity_list">List</string>
    <string name="activity_weather">Weather</string>
    <string name="activity_earthquake">Earthquake</string>
    <string name="activity_tweets_hashtags">Tweets - Hashtags</string>
    <string name="currency_converter">Currency converter A.S</string>
    <string name="metric_unit_converter">Metric unit converter</string>
    <string name="button_converter">Converter</string>
    

    <!-- Messages-->
    <string name="message_muc">Select the metric unit to convert</string>
    <string name="message_cc">Select the currency you want to convert</string>
    <string name="message_ev">Enter the value</string>
    <string name="message_to">To</string>

    <string name="message_alert_empty">There are empty fields!</string>
    <string name="message_alert_title">Alert!</string>
    <string name="message_ok">Okay</string>

    <!-- Initial-->
    <string name="initial_0">0</string>

    <!-- Spinners-->
    <string-array name="options_currency">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <!-- Spinners-->
    <string-array name="options_metric">
        <item>Kilómentros</item>
        <item>Metros</item>
        <item>Decímetro</item>
        <item>Centímetro</item>
        <item>Milímetro</item>
    </string-array>

    <!-- Value Calculator-->
    <string name="value_0">0</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>

    <!-- Operations -->
    <string name="operation_sum">+</string>
    <string name="operation_rest">-</string>
    <string name="operation_multi">*</string>
    <string name="operation_div">/</string>
    <string name="operation_equal">=</string>

    <!-- Actions -->
    <string name="floating">.</string>
    <string name="reset">A/C</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
