<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_cResult"
        android:hint="@string/initial_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100dp"
        android:gravity="right"
        android:numeric="decimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_value1"
                android:text="@string/value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value2"
                android:text="@string/value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value3"
                android:text="@string/value_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>
            <Button
                android:id="@+id/btn_operation_sum"
                android:text="@string/operation_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_value4"
                android:text="@string/value_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value5"
                android:text="@string/value_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value6"
                android:text="@string/value_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_operation_rest"
                android:text="@string/operation_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_value7"
                android:text="@string/value_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value8"
                android:text="@string/value_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value9"
                android:text="@string/value_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_operation_multi"
                android:text="@string/operation_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_action_reset"
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_value0"
                android:text="@string/value_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_operation_equal"
                android:text="@string/operation_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/btn_operation_div"
                android:text="@string/operation_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>