<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView_1"
                android:text="@string/hello_world"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_below="@id/textView_1"
                android:id="@+id/group_basic"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_green_300"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_calculator"
                    android:background="@color/material_green_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_calculator"/>

                <Button
                    android:id="@+id/btn_converter_unit"
                    android:background="@color/material_green_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metric_unit_converter"/>


            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/group_basic"
                android:id="@+id/group_middle"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_lime_300"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_list"
                    android:background="@color/material_lime_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_list"/>

                <Button
                    android:id="@+id/btn_phonebook"
                    android:background="@color/material_lime_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_contact"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/group_middle"
                android:id="@+id/group_advanced"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_pink_300"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_currency_converter"
                    android:background="@color/material_pink_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_converter"/>

                <Button
                    android:background="@color/material_pink_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_weather"/>

                <Button
                    android:background="@color/material_pink_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_earthquake"/>

                <Button
                    android:background="@color/material_pink_500"
                    android:textColor="@color/material_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_tweets_hashtags"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>